# large-wave-effect

./: .gitignore  .zenodo.json  CITATION.cff  NOTICE  README.md  pyproject.toml
docs/: A1-open-problem.md  proof-plan.md
docs/adr/: 0001-standalone-pep723-verify-scripts.md  0002-mod4-ceiling-criterion.md  0003-proved-computational-conjectured-separation.md  (+1 more)
exact/: README.md
numerics/: dagger_campaign.jsonl  dagger_singleton_rings.mac  dagger_tail_asymptotics.mac  dagger_tail_elliptic.input  diag_dagger_losses.py  diag_dagger_nodes.py  diag_dagger_thetaball.py  make_figures.py  prove_box_parallel.py  run_dagger_campaign.py  run_dagger_continuum_tiling.py  verify_2p_family.py  verify_AN_closed_form.py  verify_asymptotic_corrections.py  verify_bandedge_transfer.py  verify_bessel_kernel.py  verify_beta_odd.py  verify_bn_constant.py  verify_bn_largewave_tail.py  verify_bn_parity.py  verify_bn_profile_concentration.py  verify_bn_profile_gaussian.py  verify_bn_profile_max.py  verify_bn_profile_rigorous.py  verify_bn_residual_profile.py  verify_bohr_lower_bound.py  verify_branched_flow.py  verify_caustic_airy.py  verify_caustic_mi.py  verify_ceiling_criterion.py  verify_classification_proof.py  verify_conj_order_map.py  verify_cusp_pearcey.py  verify_dagger_concavity.jl  verify_dagger_concavity.py  verify_dagger_continuum.py  verify_dagger_decomp.py  verify_dagger_extremal.py  verify_dagger_extremal2.py  verify_dagger_kluyver.py  (+73 more)
paper/: large-wave-effect.tex
submission/: arxiv.txt  cover-letter.md
tests/: test_cyclotomic.py  test_ring.py  test_schrodinger.py
(+22 files in other folders)
